insert e list funcionais
