# api/controllers/user_controller.py
@@ -1,3 +1,4 @@
+from utils.helper import Helper
 from flask import Blueprint, jsonify, request
 from model.user import User
 
@@ -7,15 +8,22 @@ user_controller = Blueprint('user_controller', __name__)
 def user_add():
     
     required_params = ['name', 'email', 'password']
-
     if not all(param in request.json for param in required_params):
-        return jsonify({'error': 'Alguns parâmetros não foram preenchidos corretamente!'}), 400
+        return jsonify({'error': 'Alguns parametros nao foram preenchidos corretamente!'}), 400
 
     name = request.json['name']
     email = request.json['email']
     password = request.json['password']
 
-    user = User(name, email, password)
+    user = User(Helper.get_new_id(), name, email, password)
     user.add()
 
-    return jsonify({'message': 'User added successfully'}), 200
+    return jsonify({'message': 'User added successfully'}), 201
+
+@user_controller.route("/user/list", methods=['GET'])
+def user_list():
+    
+    
+    users = User.list()
+    
+    return jsonify(users), 200
