# model/user.py
@@ -1,14 +1,19 @@
-from infrastructure.database.setup import Setup
+from model.core.user_setup import UserSetup
+from infrastructure.database.base_setup import BaseSetup
 from model.common.entity import Entity
 from utils.helper import Helper
+from infrastructure.database.constants import *
 
 class User(Entity):
 
-    def __init__(self, name, email, password):
-        self.id = Helper.get_new_id()
+    def __init__(self, new_id, name, email, password):
+        self.id = new_id
         self.name = name
         self.email = email
         self.password = password
         
     def add(self):
-        Setup.insert(self)
+        BaseSetup.insert(USER_TABLE, self)
+
+    def list():
+        return UserSetup.view()
